# facialcxx

./: CMakeLists.txt  README.md
include/: spoofing.h  yolov7.h
src/: spoofing.cpp
src/headers/: blazeface.h  facedirect.h  facepipline.h  facial.h  featurenet.h  ghostfacenet.h  metricnet.h  spoofing.h  yolov7.h
src/modules/: blazeface.cpp  facedirect.cpp  facepipeline.cpp  facial.cpp  featurenet.cpp  ghostfacenet.cpp  metricnet.cpp  spoofing.cpp  yolov7.cpp
tests/: ortapi.cpp
